<resources>
    <string name="app_name">Play By Droid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="SignIn">Sign In</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="register_button_text">Register</string>
    <string name="confirm_password_button_text">Confirm Password</string>
</resources>
